--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
         <repository>
             <id>deployment</id>
             <name>Internal Releases</name>
-            <url>http://3.14.147.109:8081/repository/rawireddy</url>
+            <url>http://3.144.183.95:8081/repository/gaddam</url>
         </repository>
         <snapshotRepository>
             <id>deployment</id>
             <name>Internal Snapshot Releases</name>
-            <url>http://3.14.147.109:8081/repository/rawireddy-snap/</url>
+            <url>http://3.144.183.95:8081/repository/gaddam-snap/</url>
         </snapshotRepository>
     </distributionManagement>
   <dependencies>
